unifi/300-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi
  namespace: unifi

spec:
  type: LoadBalancer
  ports:
    - protocol: UDP
      name: unifi-stun
      port: 3478
      targetPort: 3478
    - protocol: UDP
      name: unifi-ap-disc
      port: 10001
      targetPort: 10001
    - protocol: TCP
      name: unifi-http-inform
      port: 8080
      targetPort: 8080
    - protocol: UDP
      name: unifi-l2-disc
      port: 1900
      targetPort: 1900
  selector:
    app: unifi
