unifi/350-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-ui
  namespace: unifi
  annotations:
   traefik.ingress.kubernetes.io/service.serversscheme: https
   traefik.ingress.kubernetes.io/service.serverstransport: unifi-skipverify@kubernetescrd
spec:
  ports:
    - protocol: TCP
      name: https
      port: 8443
  selector:
    app: unifi
