unifi/500-ingress.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi
  namespace: unifi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/service.serverstransport: default-skipverify@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: ${UNIFI_FQDN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: unifi-ui
            port:
              name: https
  tls:
    - secretName: unifi-tls
      hosts:
        - ${UNIFI_FQDN}
